--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="icon" href="./external_resources/favicon.ico">
     <title>Oumar Barry</title>
 </head>
 <body>
+    <div>
+        <h1>I'm Angela</h1>
+        <p>a programmer.</p>
+    </div>
     
+    <div class="firstone"></div>
+    <div class="secondone"></div>
 </body>
 </html>
