--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <title>Oumar Barry</title>
 </head>
 <body>
-    <div>
+    <div class ="firstone">
+        <img src="./external_resources/cloud.png" alt="cloud">
         <h1>I'm Angela</h1>
         <p>a programmer.</p>
+        <img src="./external_resources/cloud.png" alt="cloud">
+        <img src="./external_resources/mountain.png" alt="mountain">
     </div>
     
     <div class="firstone"></div>
