--- a/practice/relative.html
+++ b/practice/relative.html
@@ -7,26 +7,32 @@
   <title>Document</title>
 
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
     div{
       width: 100px;
       height: 100px;
-      position:relative;
-      display: inline-block;
+      position:absolute;
+      /* display: block; */
     }
 
     .red {
       background-color: red;
-      left : 200px
+      top: 200px;
+      left: 200px;
     }
 
     .blue {
       background-color: blue;
-      right: 100px;
+      top: 100px;
+      left: 100px;
     }
 
     .yellow {
-      background-color: yellow;
-      right : 105px
+      background-color: rgb(255, 166, 0);
     }
   </style>
 </head>
