--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class ="firstone">
-        <img src="./external_resources/cloud.png" alt="cloud">
-        <h1>I'm Angela</h1>
+        <img class="topcloud" src="./external_resources/cloud.png" alt="cloud">
+        <h1>I'm Oumar</h1>
         <p>a programmer.</p>
-        <img src="./external_resources/cloud.png" alt="cloud">
+        <img class="bottomcloud" src="./external_resources/cloud.png" alt="cloud">
         <img src="./external_resources/mountain.png" alt="mountain">
     </div>
     
